# things-mcp

./: AGENTS.md  Dockerfile  Dockerfile.test  README.md  backup_things_db.sh  get_things_db_path.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.sh  run_things.sh
.github/workflows/: docker-build.yml  docker-publish.yml  test.yml
scripts/: codex-cloud-maintenance.sh  codex-cloud-setup.sh
src/: main.py  test_fastmcp.py  test_main.py
tests/: test_main.py
