[project]
name = "things-mcp"
version = "0.1.0"
description = "Minimal FastMCP server for the Things task manager."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastmcp==3.1.0",
    "things.py==1.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.4.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
